--- a/main.css
+++ b/main.css
@@ -149,7 +149,7 @@ p {
 
 .profile-social-links li {
   list-style: none;
-  margin: -5px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
   padding: 0px;
   float: left;
   width: 25%;
@@ -158,7 +158,8 @@ p {
 
 .profile-social-links li a {
   display: inline-block;
-  color: red;
+  font-size:1.4rem;
+  color: #0067ff;
   width: 24px;
   height: 24px;
   padding: 6px;
